--- a/LeetCode/721-730/729. 我的日程安排表 I（中等）.md
+++ b/LeetCode/721-730/729. 我的日程安排表 I（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[729. 我的日程安排表 I]()** ，难度为 **中等**。
+这是 LeetCode 上的 **[729. 我的日程安排表 I](https://leetcode-cn.com/problems/my-calendar-i/solution/by-ac_oier-1znx/)** ，难度为 **中等**。
 
 Tag : 「模拟」、「红黑树」、「线段树」
 
