--- a/LeetCode/711-720/713. 乘积小于 K 的子数组（中等）.md
+++ b/LeetCode/711-720/713. 乘积小于 K 的子数组（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[713. 乘积小于 K 的子数组]()** ，难度为 **中等**。
+这是 LeetCode 上的 **[713. 乘积小于 K 的子数组](https://leetcode-cn.com/problems/subarray-product-less-than-k/solution/by-ac_oier-3w08/)** ，难度为 **中等**。
 
 Tag : 「滑动窗口」、「双指针」
 
