--- a/LeetCode/931-940/933. 最近的请求次数（简单）.md
+++ b/LeetCode/931-940/933. 最近的请求次数（简单）.md
@@ -170,8 +170,8 @@ class RecentCounter {
     }
 }
 ```
-* 时间复杂度：调用次数为 $m$，值域大小为 $n$，复杂度为 $O(\sqrt{n})$
-* 空间复杂度：$O(m +\sqrt{n})$
+* 时间复杂度：通常情况下：调用次数为 $m$，值域大小为 $n$，复杂度为 $O(\sqrt{n})$；本题：$O(C)$，其中 $C = 300$ 为块大小
+* 空间复杂度：通常情况下：$O(m +\sqrt{n})$；本题：$O(m + M)$，其中 $M$ 为分块数组大小
 
 ---
 
