--- a/LeetCode/441-450/448. 找到所有数组中消失的数字（简单）.md
+++ b/LeetCode/441-450/448. 找到所有数组中消失的数字（简单）.md
@@ -2,15 +2,15 @@
 
 这是 LeetCode 上的 **[448. 找到所有数组中消失的数字](https://leetcode-cn.com/problems/find-all-numbers-disappeared-in-an-array/solution/li-yong-tong-pai-xu-de-si-lu-ni-huan-ke-e3t4w/)** ，难度为 **简单**。
 
-Tag : 「排序」
+Tag : 「排序」、「原地哈希」
 
 
 
-给定一个范围在  1 ≤ a[i] ≤ n ( n = 数组大小 ) 的 整型数组，数组中的元素一些出现了两次，另一些只出现一次。
+给定一个范围在  $1 ≤ a[i] ≤ n$ ( $n$ = 数组大小 ) 的 整型数组，数组中的元素一些出现了两次，另一些只出现一次。
 
-找到所有在 [1, n] 范围之间没有出现在数组中的数字。
+找到所有在 $[1, n]$ 范围之间没有出现在数组中的数字。
 
-您能在不使用额外空间且时间复杂度为O(n)的情况下完成这个任务吗? 你可以假定返回的数组不算在额外空间内。
+您能在不使用额外空间且时间复杂度为 $O(n)$ 的情况下完成这个任务吗? 你可以假定返回的数组不算在额外空间内。
 
 示例:
 ```
@@ -23,19 +23,20 @@ Tag : 「排序」
 
 ---
 
-### 桶排序
+### 桶排序（原地哈希）
 
-题目规定了 `1 ≤ a[i] ≤ n` ，因此我们可以使用「桶排序」的思路，将每个数放在其应该出现的位置上。
+题目规定了 $1 ≤ a[i] ≤ n$，因此我们可以使用「桶排序」的思路，将每个数放在其应该出现的位置上。
 
 基本思路为：
 
-按照桶排序思路进行预处理：保证 1 出现在 nums[0] 的位置上，2 出现在 nums[1] 的位置上，…，n 出现在 nums[n - 1] 的位置上。不在 [1, n] 范围内的数不用动。
+按照桶排序思路进行预处理：保证 $1$ 出现在 $nums[0]$ 的位置上，$2$ 出现在 $nums[1]$ 的位置上，…，$n$ 出现在 $nums[n - 1]$ 的位置上。不在 $[1, n]$ 范围内的数不用动。
 
-例如样例中 [4,3,2,7,8,2,3,1] 将会被预处理成 [1,2,3,4,3,2,7,8]。
+例如样例中 $[4,3,2,7,8,2,3,1]$ 将会被预处理成 $[1,2,3,4,3,2,7,8]$。
 
-遍历 nums，将不符合 `nums[i] != i + 1` 的数字加入结果集 ~ 
+遍历 $nums$，将不符合 `nums[i] != i + 1` 的数字加入结果集 ~ 
 
-```java
+代码：
+```Java 
 class Solution {
     public List<Integer> findDisappearedNumbers(int[] nums) {
         int n = nums.length;
@@ -62,7 +63,7 @@ class Solution {
 
 ### 最后
 
-这是我们「刷穿 LeetCode」系列文章的第 `No.448` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先将所有不带锁的题目刷完。
+这是我们「刷穿 LeetCode」系列文章的第 `No.448` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
