--- a/Index/记忆化搜索.md
+++ b/Index/记忆化搜索.md
@@ -8,5 +8,6 @@
 | [576. 出界的路径数](https://leetcode-cn.com/problems/out-of-boundary-paths/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/out-of-boundary-paths/solution/gong-shui-san-xie-yi-ti-shuang-jie-ji-yi-asrz/) | 中等 | 🤩🤩🤩🤩     |
 | [913. 猫和老鼠](https://leetcode-cn.com/problems/cat-and-mouse/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/cat-and-mouse/solution/gong-shui-san-xie-dong-tai-gui-hua-yun-y-0bx1/) | 困难 | 🤩🤩🤩🤩     |
 | [1137. 第 N 个泰波那契数](https://leetcode-cn.com/problems/n-th-tribonacci-number/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/n-th-tribonacci-number/solution/gong-shui-san-xie-yi-ti-si-jie-die-dai-d-m1ie/) | 简单 | 🤩🤩🤩🤩     |
+| [1728. 猫和老鼠 II](https://leetcode.cn/problems/cat-and-mouse-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/cat-and-mouse-ii/solution/by-ac_oier-gse8/) | 困难 | 🤩🤩🤩🤩     |
 | [剑指 Offer 10- I. 斐波那契数列](https://leetcode-cn.com/problems/fei-bo-na-qi-shu-lie-lcof/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/fei-bo-na-qi-shu-lie-lcof/solution/gong-shui-san-xie-yi-ti-si-jie-dong-tai-9zip0/) | 简单 | 🤩🤩🤩🤩🤩    |
 
