--- a/Index/博弈论.md
+++ b/Index/博弈论.md
@@ -3,5 +3,6 @@
 | [292. Nim 游戏](https://leetcode-cn.com/problems/nim-game/)  | [LeetCode 题解链接](https://leetcode-cn.com/problems/nim-game/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-wmz2t/) | 中等 | 🤩🤩🤩🤩     |
 | [810. 黑板异或游戏](https://leetcode-cn.com/problems/chalkboard-xor-game/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/chalkboard-xor-game/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-ges7k/) | 困难 | 🤩🤩🤩🤩     |
 | [877. 石子游戏](https://leetcode-cn.com/problems/stone-game/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/stone-game/solution/gong-shui-san-xie-jing-dian-qu-jian-dp-j-wn31/) | 中等 | 🤩🤩🤩🤩     |
+| [1728. 猫和老鼠 II](https://leetcode.cn/problems/cat-and-mouse-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/cat-and-mouse-ii/solution/by-ac_oier-gse8/) | 困难 | 🤩🤩🤩🤩     |
 | [2029. 石子游戏 IX](https://leetcode-cn.com/problems/stone-game-ix/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/stone-game-ix/solution/gong-shui-san-xie-fen-qing-kuang-tao-lun-h1oa/) | 中等 | 🤩🤩🤩🤩     |
 
