✨style: Bulk processing format

--- a/LeetCode/1-10/1. 两数之和（简单）.md
+++ b/LeetCode/1-10/1. 两数之和（简单）.md
@@ -15,25 +15,27 @@ Tag : 「哈希表」、「模拟」
 示例 1：
 ```
 输入：nums = [2,7,11,15], target = 9
+
 输出：[0,1]
+
 解释：因为 nums[0] + nums[1] == 9 ，返回 [0, 1] 。
 ```
 
 示例 2：
 ```
 输入：nums = [3,2,4], target = 6
+
 输出：[1,2]
 ```
 
 示例 3：
 ```
 输入：nums = [3,3], target = 6
+
 输出：[0,1]
 ```
 
-
 提示：
-
 * $2 <= nums.length <= 10^3$
 * -$10^9 <= nums[i] <= 10^9$
 * -$10^9 <= target <= 10^9$
@@ -45,13 +47,15 @@ Tag : 「哈希表」、「模拟」
 
 由于我们每次要从数组中找两个数。
 
-因此一个很简单的思路是：使用两重循环枚举下标 i 和 j ，分别代表要找的两个数。
+因此一个很简单的思路是：使用两重循环枚举下标 $i$ 和 $j$ ，分别代表要找的两个数。
 
-然后判断 $nums[i] + nums[j] == target$ 是否成立。
+然后判断 $nums[i] + nums[j] = target$ 是否成立。
 
-另外为了防止得到重复的解，我们需要在第一层循环中让 i 从 0 开始，到 n - 2 结束（确保能取到下一位数作为 j ）；在第二层循环中让 j 从 i + 1 开始，到 n - 1 结束。
+另外为了防止得到重复的解，我们需要在第一层循环中让 $i$ 从 $0$ 开始，到 $n - 2$ 结束（确保能取到下一位数作为 j ）；在第二层循环中让 $j$ 从 $i + 1$ 开始，到 $n - 1$ 结束。
 
-```Java []
+代码：
+
+```Java
 class Solution {
     public int[] twoSum(int[] nums, int t) {
         int n = nums.length;
@@ -69,7 +73,7 @@ class Solution {
 
 ---
 
-### 哈希表解法
+### 哈希表
 
 首先，任何优化的思路都不外乎「减少重复」。
 
@@ -77,11 +81,12 @@ class Solution {
 
 举个例子，对于 `nums = [2,3,8,4], target = 9` 的样例，我们先确定下来第一个数是 `2`，然后从后扫描到最后一个数，检查是否有 `7`。发现没有，再决策第一个数为 `3` 的情况，这时候我们应该利用前一次扫描的结果来帮助我们快速判断是否存在 `6`，而不是再重新进行一次扫描。
 
-这是直观的优化思路，不难想到可以使用哈希表进行存储。以数值为 key，数值的下标为 value。
+这是直观的优化思路，不难想到可以使用哈希表进行存储。以数值为 `key`，数值的下标为 `value`。
 
 当动手将想法转化为代码时，会发现如果先敲定第一个数，将后面的数加入哈希表，再进行下一位的遍历的时候，还需要将该数值从哈希表中进行删除。
 
-```Java []
+代码：
+```Java
 class Solution {
     public int[] twoSum(int[] nums, int t) {
         Map<Integer, Integer> map = new HashMap<>();
@@ -99,9 +104,9 @@ class Solution {
 
 这时候不妨将思路转换过来，遍历过程中敲定第二个数，使用哈希表在第二个数的前面去找第一个数。
 
-具体的做法是，边遍历边存入哈希表，遍历过程中使用的下标 i 用作敲定第二个数，再从现有的哈希表中去找另外一个目标数（由于下标 i 前面的数都被加入哈希表了，即在下标 i 前面去找第一个数）。
+具体的做法是，边遍历边存入哈希表，遍历过程中使用的下标 i 用作敲定第二个数，再从现有的哈希表中去找另外一个目标数（由于下标 $i$ 前面的数都被加入哈希表了，即在下标 $i$ 前面去找第一个数）。
 
-```Java []
+```Java
 class Solution {
     public int[] twoSum(int[] nums, int t) {
         Map<Integer, Integer> map = new HashMap<>();
