--- a/LeetCode/1-10/10. 正则表达式匹配（困难）.md
+++ b/LeetCode/1-10/10. 正则表达式匹配（困难）.md
@@ -6,10 +6,10 @@ Tag : 「动态规划」
 
 
 
-给你一个字符串 s 和一个字符规律 p，请你来实现一个支持 '.' 和 '*' 的正则表达式匹配。
+给你一个字符串 `s` 和一个字符规律 `p`，请你来实现一个支持 `'.'` 和 `'*'` 的正则表达式匹配。
 
-* '.' 匹配任意单个字符
-* '*' 匹配零个或多个前面的那一个元素
+* `'.'` 匹配任意单个字符
+* `'*'` 匹配零个或多个前面的那一个元素
 
 所谓匹配，是要涵盖 整个 字符串 s的，而不是部分字符串。
 
@@ -44,11 +44,11 @@ Tag : 「动态规划」
 ```
 
 提示：
-* 0 <= s.length <= 20
-* 0 <= p.length <= 30
-* s 可能为空，且只包含从 a-z 的小写字母。
-* p 可能为空，且只包含从 a-z 的小写字母，以及字符 . 和 *。
-* 保证每次出现字符 * 时，前面都匹配到有效的字符
+* $0 <= s.length <= 20$
+* $0 <= p.length <= 30$
+* `s` 可能为空，且只包含从 `a-z` 的小写字母。
+* `p` 可能为空，且只包含从 `a-z` 的小写字母，以及字符 `.` 和 `*`。
+* 保证每次出现字符 `*` 时，前面都匹配到有效的字符
 
 ---
 
@@ -119,11 +119,10 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：n 表示 s 的长度，m 表示 p 的长度，总共 $n * m$ 个状态。复杂度为 $O(n * m)$
-* 空间复杂度：使用了二维数组记录结果。复杂度为 $O(n * m)$
+* 时间复杂度：$n$ 表示 `s` 的长度，$m$ 表示 `p` 的长度，总共 $n \times m$ 个状态。复杂度为 $O(n \times m)$
+* 空间复杂度：使用了二维数组记录结果。复杂度为 $O(n \times m)$
 
 **动态规划本质上是枚举（不重复的暴力枚举），因此其复杂度很好分析，有多少个状态就要被计算多少次，复杂度就为多少。**
-
 
 ---
 
