--- a/LeetCode/1-10/2. 两数相加（中等）.md
+++ b/LeetCode/1-10/2. 两数相加（中等）.md
@@ -10,7 +10,7 @@ Tag : 「递归」、「链表」、「数学」、「模拟」
 
 请你将两个数相加，并以相同形式返回一个表示和的链表。
 
-你可以假设除了数字 0 之外，这两个数都不会以 0 开头。
+你可以假设除了数字 $0$ 之外，这两个数都不会以 $0$ 开头。
 
 示例 1：
 
@@ -18,24 +18,28 @@ Tag : 「递归」、「链表」、「数学」、「模拟」
 
 ```
 输入：l1 = [2,4,3], l2 = [5,6,4]
+
 输出：[7,0,8]
+
 解释：342 + 465 = 807.
 ```
 示例 2：
 ```
 输入：l1 = [0], l2 = [0]
+
 输出：[0]
 ```
 示例 3：
 ```
 输入：l1 = [9,9,9,9,9,9,9], l2 = [9,9,9,9]
+
 输出：[8,9,9,9,0,0,0,1]
 ```
 
 提示：
 
-* 每个链表中的节点数在范围 [1, 100] 内
-* 0 <= Node.val <= 9
+* 每个链表中的节点数在范围 $[1, 100]$ 内
+* $0 <= Node.val <= 9$
 * 题目数据保证列表表示的数字不含前导零
 
 
@@ -45,7 +49,7 @@ Tag : 「递归」、「链表」、「数学」、「模拟」
 
 这是道模拟题，模拟人工竖式做加法的过程：
 
-从最低位至最高位，逐位相加，如果和大于等于 10，则保留个位数字，同时向前一位进 1 如果最高位有进位，则需在最前面补 1。
+从最低位至最高位，逐位相加，如果和大于等于 $10$，则保留个位数字，同时向前一位进 1 如果最高位有进位，则需在最前面补 $1$。
 
 做有关链表的题目，有个常用技巧：添加一个虚拟头结点（哨兵），帮助简化边界情况的判断。
 
