--- a/LeetCode/1-10/3. 无重复字符的最长子串（中等）.md
+++ b/LeetCode/1-10/3. 无重复字符的最长子串（中等）.md
@@ -11,32 +11,39 @@ Tag : 「哈希表」、「双指针」、「滑动窗口」
 示例 1:
 ```
 输入: s = "abcabcbb"
+
 输出: 3 
+
 解释: 因为无重复字符的最长子串是 "abc"，所以其长度为 3。
 ```
 示例 2:
 ```
 输入: s = "bbbbb"
+
 输出: 1
+
 解释: 因为无重复字符的最长子串是 "b"，所以其长度为 1。
 ```
 示例 3:
 ```
 输入: s = "pwwkew"
+
 输出: 3
+
 解释: 因为无重复字符的最长子串是 "wke"，所以其长度为 3。
      请注意，你的答案必须是 子串 的长度，"pwke" 是一个子序列，不是子串。
 ```
 示例 4:
 ```
 输入: s = ""
+
 输出: 0
 ```
 
 提示：
 
-* 0 <= s.length <= 5 * $10^4$
-* s 由英文字母、数字、符号和空格组成
+* $0 <= s.length <= 5 \times 10^4$
+* `s` 由英文字母、数字、符号和空格组成
 
 ---
 
