--- a/LeetCode/1-10/4. 寻找两个正序数组的中位数（困难）.md
+++ b/LeetCode/1-10/4. 寻找两个正序数组的中位数（困难）.md
@@ -6,48 +6,55 @@ Tag : 「二分」、「分治」
 
 
 
-给定两个大小分别为 m 和 n 的正序（从小到大）数组 nums1 和 nums2。
+给定两个大小分别为 $m$ 和 $n$ 的正序（从小到大）数组 `nums1` 和 `nums2`。
 
 请你找出并返回这两个正序数组的「中位数」。
 
 示例 1：
 ```
 输入：nums1 = [1,3], nums2 = [2]
+
 输出：2.00000
+
 解释：合并数组 = [1,2,3] ，中位数 2
 ```
 示例 2：
 ```
 输入：nums1 = [1,2], nums2 = [3,4]
+
 输出：2.50000
+
 解释：合并数组 = [1,2,3,4] ，中位数 (2 + 3) / 2 = 2.5
 ```
 示例 3：
 ```
 输入：nums1 = [0,0], nums2 = [0,0]
+
 输出：0.00000
 ```
 示例 4：
 ```
 输入：nums1 = [], nums2 = [1]
+
 输出：1.00000
 ```
 示例 5：
 ```
 输入：nums1 = [2], nums2 = []
+
 输出：2.00000
 ```
 
 提示：
-* nums1.length == m
-* nums2.length == n
-* 0 <= m <= 1000
-* 0 <= n <= 1000
-* 1 <= m + n <= 2000
-* -$10^6$ <= nums1[i], nums2[i] <= $10^6$
+* $nums1.length == m$
+* $nums2.length == n$
+* $0 <= m <= 1000$
+* $0 <= n <= 1000$
+* $1 <= m + n <= 2000$
+* $-10^6 <= nums1[i], nums2[i] <= 10^6$
 
 
-进阶：你能设计一个时间复杂度为 O(log (m+n)) 的算法解决此问题吗？
+进阶：你能设计一个时间复杂度为 $O(\log (m+n))$ 的算法解决此问题吗？
 
 ---
 
@@ -143,14 +150,11 @@ class Solution {
    3. 根据数据规模，判断我们的朴素算法计算机是否可以在 1s 内处理完 ② ，即判断运算次数是否在 $10^7$ 以内 ③ 。例如本题使用双指针算法，指针移动和判断大小算一次运行，由于数据只有 2000，距离 $10^7$ 还很远，所以完全足够了
 
 
+说明 ①：正规的算法题目都会提供数据规模，LeetCode 上一些旧题目没有提供，是因为当时出的时候不太规范，LeetCode 新题、其他 OJ 平台题目，算法竞赛题目都会有。
 
-*说明 ①：正规的算法题目都会提供数据规模，LeetCode 上一些旧题目没有提供，是因为当时出的时候不太规范，LeetCode 新题、其他 OJ 平台题目，算法竞赛题目都会有。*
+说明 ②：即使是最严格的 OJ 中最简单的题目，也会提供 1s 的运行时间，超过这个时间才算超时。
 
-*说明 ②：即使是最严格的 OJ 中最简单的题目，也会提供 1s 的运行时间，超过这个时间才算超时。*
-
-*说明 ③：计算器 1s 内极限的处理速度是 $10^8$ ，但为了尽可能不出现错误提交，使用技巧时尽量和 $10^7$ 进行比较。*
-
-
+说明 ③：计算器 1s 内极限的处理速度是 $10^8$ ，但为了尽可能不出现错误提交，使用技巧时尽量和 $10^7$ 进行比较。
 
 **注意：这两个技巧，我只推荐在机试或者竞赛（尽可能快 AC 的场景）中使用。平时练习或者和面试的时候必须老实按照题目要求来。**
 
