--- a/LeetCode/1-10/5. 最长回文子串（中等）.md
+++ b/LeetCode/1-10/5. 最长回文子串（中等）.md
@@ -6,7 +6,7 @@ Tag : 「模拟」、「回文串」
 
 
 
-给你一个字符串 s，找到 s 中最长的回文子串。
+给你一个字符串 `s`，找到 `s` 中最长的回文子串。
 
 示例 1：
 ```
@@ -32,8 +32,8 @@ Tag : 「模拟」、「回文串」
 
 提示：
 
-* 1 <= s.length <= 1000
-* s 仅由数字和英文字母（大写和/或小写）组成
+* $1 <= s.length <= 1000$
+* `s` 仅由数字和英文字母（大写和/或小写）组成
 
 
 ---
@@ -165,8 +165,6 @@ class Solution {
 同时借助 Manacher 算法，还给大家介绍了如何避免回文串长度的分情况讨论，这个技巧只要涉及「回文串」问题都适用（无论是否使用 Manacher 算法）。
 
 对于想要背过 Manacher 算法的同学，建议先敲 3 遍，默写 2 遍，然后过了 24 小时，再默写 2 遍，一周后，再进行重复，直到熟练。
-
-不要害怕遗忘，遗忘是正常的，多进行几次重复便会形成肌肉记忆。LeetCode 周赛上常年占据第一页的选手，无不都是对算法套路和模板极其熟练。加油 ~
 
 ---
 ### 最后
