--- a/LeetCode/1-10/6. Z 字形变换（中等）.md
+++ b/LeetCode/1-10/6. Z 字形变换（中等）.md
@@ -94,7 +94,7 @@ class Solution {
 }
 ```
 * 时间复杂度：创建数组的工作只会发生一次，清空 `idxs` 数组操作会发生在每个样例中，复杂度为 $O(m)$；将 `s` 的每个字符填入矩阵的复杂度为 $O(n)$；从矩阵中取出字符构建答案复杂度为 $O(n)$。整体复杂度为 $O(m + n)$
-* 空间复杂度：$O(n * m)$
+* 空间复杂度：$O(n \times m)$
 
 ---
 
