--- a/LeetCode/1-10/7. 整数反转（简单）.md
+++ b/LeetCode/1-10/7. 整数反转（简单）.md
@@ -6,46 +6,50 @@ Tag : 「数学」、「模拟」
 
 
 
-给你一个 32 位的有符号整数 x ，返回将 x 中的数字部分反转后的结果。
+给你一个 $32$ 位的有符号整数 `x` ，返回将 `x` 中的数字部分反转后的结果。
 
-如果反转后整数超过 32 位的有符号整数的范围 [−$2^{31}$,  $2^{31}$ − 1] ，就返回 0。
+如果反转后整数超过 $32$ 位的有符号整数的范围 $[−2^{31}, 2^{31} − 1]$ ，就返回 $0$。
 
-假设环境不允许存储 64 位整数（有符号或无符号）。
+假设环境不允许存储 $64$ 位整数（有符号或无符号）。
 
 
 示例 1：
 ```
 输入：x = 123
+
 输出：321
 ```
 示例 2：
 ```
 输入：x = -123
+
 输出：-321
 ```
 示例 3：
 ```
 输入：x = 120
+
 输出：21
 ```
 示例 4：
 ```
 输入：x = 0
+
 输出：0
 ```
 
 提示：
-* -$2^{31}$ <= x <= $2^{31}$ - 1
-
+* -$2^{31} <= x <= 2^{31}$ - 1
 
 ---
+
 ### 不完美解法
 
 在机试或者周赛这种需要快速 AC 的场景中，遇到这种从文字上进行限制的题目，可以选择性的忽略限制。
 
-对于本题，题目从文字上限制我们只能使用 32 位的数据结构（int）。
+对于本题，题目从文字上限制我们只能使用 $32$ 位的数据结构（`int`）。
 
-但由于数据范围过大，使用 int 会有溢出的风险，所以我们使用 long 来进行计算，在返回再转换为 int。
+但由于数据范围过大，使用 `int` 会有溢出的风险，所以我们使用 `long` 来进行计算，在返回再转换为 `int`。
 
 代码：
 ```Java
@@ -60,16 +64,16 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：数字 $x$ 的位数，数字大约有 $\log{10}{x}$ 位。复杂度为 $O(\log{10}{x})$
+* 时间复杂度：数字 $x$ 的位数，数字大约有 $\log{x}$ 位。复杂度为 $O(\log{x})$
 * 空间复杂度：$O(1)$
 
-
 ---
+
 ### 完美解法
 
-在「不完美解法」中，我们使用了不符合文字限制的 long 数据结构。
+在「不完美解法」中，我们使用了不符合文字限制的 `long` 数据结构。
 
-接下来我们看看，不使用 long 该如何求解。
+接下来我们看看，不使用 `long` 该如何求解。
 
 从上述解法来看，我们在循环的 `ans = ans * 10 + x % 10` 这一步会有溢出的风险，因此我们需要边遍历边判断是否溢出：
 
@@ -92,7 +96,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：数字 $x$ 的位数，数字大约有 $\log{10}{x}$ 位。复杂度为 $O(\log{10}{x})$
+* 时间复杂度：数字 $x$ 的位数，数字大约有 $\log{x}$ 位。复杂度为 $O(\log{x})$
 * 空间复杂度：$O(1)$
 
 
