--- a/LeetCode/1-10/8. 字符串转换整数 (atoi)（中等）.md
+++ b/LeetCode/1-10/8. 字符串转换整数 (atoi)（中等）.md
@@ -13,14 +13,14 @@ Tag : 「模拟」
 * 读入字符串并丢弃无用的前导空格
 * 检查下一个字符（假设还未到字符末尾）为正还是负号，读取该字符（如果有）。 确定最终结果是负数还是正数。 如果两者都不存在，则假定结果为正。
 * 读入下一个字符，直到到达下一个非数字字符或到达输入的结尾。字符串的其余部分将被忽略。
-* 将前面步骤读入的这些数字转换为整数（即，"123" -> 123， "0032" -> 32）。如果没有读入数字，则整数为 0 。必要时更改符号（从步骤 2 开始）。
-* 如果整数数超过 32 位有符号整数范围 [−$2^{31}$,  $2^{31}$ − 1] ，需要截断这个整数，使其保持在这个范围内。具体来说，小于 −$2^{31}$ 的整数应该被固定为 −$2^{31}$ ，大于 $2^{31}$ − 1 的整数应该被固定为 $2^{31}$ − 1 。
+* 将前面步骤读入的这些数字转换为整数（即，`"123" -> 123`， `"0032" -> 32`）。如果没有读入数字，则整数为 $0$ 。必要时更改符号（从步骤 $2$ 开始）。
+* 如果整数数超过 $32$ 位有符号整数范围 [−$2^{31}$,  $2^{31}$ − 1] ，需要截断这个整数，使其保持在这个范围内。具体来说，小于 −$2^{31}$ 的整数应该被固定为 −$2^{31}$ ，大于 $2^{31}$ − 1 的整数应该被固定为 $2^{31}$ − 1 。
 * 返回整数作为最终结果。
 
 
 注意：
 
-* 本题中的空白字符只包括空格字符 ' ' 。
+* 本题中的空白字符只包括空格字符 `' '` 。
 * 除前导空格或数字后的其余字符串外，请勿忽略 任何其他字符。
 
 
@@ -29,7 +29,9 @@ Tag : 「模拟」
 
 ```
 输入：s = "42"
+
 输出：42
+
 解释：加粗的字符串为已经读入的字符，插入符号是当前读取的字符。
 
 第 1 步："42"（当前没有读入字符，因为没有前导空格）
@@ -44,7 +46,9 @@ Tag : 「模拟」
 示例 2：
 ```
 输入：s = "   -42"
+
 输出：-42
+
 解释：
 第 1 步："   -42"（读入前导空格，但忽视掉）
             ^
@@ -72,7 +76,9 @@ Tag : 「模拟」
 示例 4：
 ```
 输入：s = "words and 987"
+
 输出：0
+
 解释：
 第 1 步："words and 987"（当前没有读入字符，因为没有前导空格）
          ^
@@ -86,7 +92,9 @@ Tag : 「模拟」
 示例 5：
 ```
 输入：s = "-91283472332"
+
 输出：-2147483648
+
 解释：
 第 1 步："-91283472332"（当前没有读入字符，因为没有前导空格）
          ^
@@ -99,15 +107,15 @@ Tag : 「模拟」
 ```
 
 提示：
-* 0 <= s.length <= 200
-* s 由英文字母（大写和小写）、数字（0-9）、' '、'+'、'-' 和 '.' 组成
+* $0 <= s.length <= 200$
+* `s` 由英文字母（大写和小写）、数字（`0-9`）、`' '`、`'+'`、`'-'` 和 `'.'` 组成
 
 ---
 ### 朴素解法
 
 这是道模拟题。
 
-一看这题目描述，多少有点做工程项目各种判断的意思了...
+一看这题目描述，多少有点做工程项目各种判断的意思了。
 
 但对于这类题目，切忌一上来直接写代码，很容易会陷入各种边界判断。
 
