--- a/LeetCode/11-20/12. 整数转罗马数字（中等）.md
+++ b/LeetCode/11-20/12. 整数转罗马数字（中等）.md
@@ -57,7 +57,7 @@ M             1000
 ```
 
 提示：
-* 1 <= num <= 3999
+* $1 <= num <= 3999$
 
 ---
 ### 模拟
@@ -89,7 +89,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：通过映射对应关系，我们发现一位「阿拉伯数字」（数值 0-9）最多用 4 个字母表示（8 = VIII），因此「罗马数字」的长度最多不超过「阿拉伯数字」长度的 $4$ 倍（同一数量级内）。对应输入值 $N$ 而言，长度约为 $logN$，因此「罗马数字」的长度不超过 $4 * logN$。复杂度为 $O(logN)$
+* 时间复杂度：通过映射对应关系，我们发现一位「阿拉伯数字」（数值 0-9）最多用 4 个字母表示（8 = VIII），因此「罗马数字」的长度最多不超过「阿拉伯数字」长度的 $4$ 倍（同一数量级内）。对应输入值 $n$ 而言，长度约为 $\log{n}$，因此「罗马数字」的长度不超过 $4 * \log{n}$。复杂度为 $O(\log{n})$
 * 空间复杂度：虽然使用了两个数组记录罗马字符和数值，但消耗的空间固定，不随着样本大小而变化。复杂度为 $O(1)$
 
 ---
