--- a/LeetCode/11-20/13. 罗马数字转整数（简单）.md
+++ b/LeetCode/11-20/13. 罗马数字转整数（简单）.md
@@ -56,8 +56,8 @@ M             1000
 ```
 
 提示：
-* 1 <= s.length <= 15
-* s 仅含字符 ('I', 'V', 'X', 'L', 'C', 'D', 'M')
+* $1 <= s.length <= 15$
+* `s` 仅含字符 ('I', 'V', 'X', 'L', 'C', 'D', 'M')
 * 题目数据保证 s 是一个有效的罗马数字，且表示整数在范围 [1, 3999] 内
 * 题目所给测试用例皆符合罗马数字书写规则，不会出现跨位等情况。
 * IL 和 IM 这样的例子并不符合题目要求，49 应该写作 XLIX，999 应该写作 CMXCIX 。
@@ -94,7 +94,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：通过映射对应关系，我们发现每一位「罗马数字字符」都对应特定的数值，将对应数值添加到答案的复杂度为 $O(1)$。复杂度为 $O(N)$
+* 时间复杂度：通过映射对应关系，我们发现每一位「罗马数字字符」都对应特定的数值，将对应数值添加到答案的复杂度为 $O(1)$。复杂度为 $O(n)$
 * 空间复杂度：虽然使用了两个数组记录罗马字符和数值，但消耗的空间固定，不随着样本大小而变化。复杂度为 $O(1)$
 
 
