--- a/LeetCode/11-20/14. 最长公共前缀（简单）.md
+++ b/LeetCode/11-20/14. 最长公共前缀（简单）.md
@@ -8,7 +8,7 @@ Tag : 「模拟」
 
 编写一个函数来查找字符串数组中的最长公共前缀。
 
-如果不存在公共前缀，返回空字符串 ""。
+如果不存在公共前缀，返回空字符串 `""`。
 
 
 示例 1：
@@ -24,9 +24,9 @@ Tag : 「模拟」
 ```
 
 提示：
-* 0 <= strs.length <= 200
-* 0 <= strs[i].length <= 200
-* strs[i] 仅由小写英文字母组成
+* $0 <= strs.length <= 200$
+* $0 <= strs[i].length <= 200$
+* `strs[i]` 仅由小写英文字母组成
 
 
 ---
@@ -54,7 +54,7 @@ class Solution {
 }
 ```
 说明：判断条件不一定要写成 `i < Integer.MAX_VALUE`，题目给出了范围是 200 以内，写成 `i <= 200` 也可以。不影响执行效率。
-* 时间复杂度：对于 n 个字符串，都需要遍历到公共前缀长度 m。复杂度为 $O(n * m)$
+* 时间复杂度：对于 $n$ 个字符串，都需要遍历到公共前缀长度 m。复杂度为 $O(n \times m)$
 * 空间复杂度：需要存储公共前缀作为答案返回。复杂度为 $O(m)$
 
 ---
