--- a/LeetCode/11-20/17. 电话号码的字母组合（中等）.md
+++ b/LeetCode/11-20/17. 电话号码的字母组合（中等）.md
@@ -6,11 +6,11 @@ Tag : 「DFS」、「回溯算法」
 
 
 
-给定一个仅包含数字 2-9 的字符串，返回所有它能表示的字母组合。
+给定一个仅包含数字 `2-9` 的字符串，返回所有它能表示的字母组合。
 
 答案可以按「任意顺序」返回。
 
-给出数字到字母的映射如下（与电话按键相同）。注意 1 不对应任何字母。
+给出数字到字母的映射如下（与电话按键相同）。注意 $1$ 不对应任何字母。
 
 ![](https://assets.leetcode-cn.com/aliyun-lc-upload/original_images/17_telephone_keypad.png)
 
@@ -37,8 +37,8 @@ Tag : 「DFS」、「回溯算法」
 ```
 
 提示：
-* 0 <= digits.length <= 4
-* digits[i] 是范围 ['2', '9'] 的一个数字。
+* $0 <= digits.length <= 4$
+* $digits[i]$ 是范围 `['2','9']` 的一个数字。
 
 ---
 
