--- a/LeetCode/11-20/18. 四数之和（中等）.md
+++ b/LeetCode/11-20/18. 四数之和（中等）.md
@@ -6,13 +6,11 @@ Tag : 「双指针」、「排序」、「n 数之和」
 
 
 
-给定一个包含 n 个整数的数组 nums 和一个目标值 target，判断 nums 中是否存在四个元素 a，b，c 和 d ，使得 a + b + c + d 的值与 target 相等？
+给定一个包含 $n$ 个整数的数组 `nums` 和一个目标值 `target`，判断 `nums` 中是否存在四个元素 `a`，`b`，`c` 和 `d` ，使得 `a + b + c + d` 的值与 `target` 相等？
 
 找出所有满足条件且不重复的四元组。
 
 注意：答案中不可以包含重复的四元组。
-
- 
 
 示例 1：
 ```
@@ -28,9 +26,9 @@ Tag : 「双指针」、「排序」、「n 数之和」
 ```
 
 提示：
-* 0 <= nums.length <= 200
-* -$10^9$ <= nums[i] <= $10^9$
-* -$10^9$ <= target <= $10^9$
+* $0 <= nums.length <= 200$
+* $-10^9 <= nums[i] <= 10^9$
+* $-10^9 <= target <= 10^9$
 
 ---
 
