--- a/LeetCode/11-20/19. 删除链表的倒数第 N 个结点（中等）.md
+++ b/LeetCode/11-20/19. 删除链表的倒数第 N 个结点（中等）.md
@@ -12,9 +12,7 @@ Tag : 「链表」、「快慢指针」、「双指针」
 
 
 示例 1：
-
 ![](https://assets.leetcode.com/uploads/2020/10/03/remove_ex1.jpg)
-
 ```
 输入：head = [1,2,3,4,5], n = 2
 
@@ -34,11 +32,10 @@ Tag : 「链表」、「快慢指针」、「双指针」
 ```
 
 提示：
-
-* 链表中结点的数目为 sz
-* 1 <= sz <= 30
-* 0 <= Node.val <= 100
-* 1 <= n <= sz
+* 链表中结点的数目为 `sz`
+* $1 <= sz <= 30$
+* $0 <= Node.val <= 100$
+* $1 <= n <= sz$
 
 ---
 
