--- a/LeetCode/11-20/20. 有效的括号（简单）.md
+++ b/LeetCode/11-20/20. 有效的括号（简单）.md
@@ -7,16 +7,13 @@ Tag : 「栈」、「有效括号」
 
 
 
-给定一个只包括 '('，')'，'{'，'}'，'['，']' 的字符串 s ，判断字符串是否有效。
+给定一个只包括 `'('，')'，'{'，'}'，'['，']'` 的字符串 `s` ，判断字符串是否有效。
 
 有效字符串需满足：
 
 1. 左括号必须用相同类型的右括号闭合。
 
 2. 左括号必须以正确的顺序闭合。
-
-    
-
 
 示例 1：
 ```
@@ -50,8 +47,8 @@ Tag : 「栈」、「有效括号」
 ```
 
 提示：
-* 1 <= s.length <= $10^4$
-* s 仅由括号 '()[]{}' 组成
+* $1 <= s.length <= 10^4$
+* `s` 仅由括号 `'()[]{}'` 组成
 
 ---
 
