--- a/LeetCode/1991-2000/1994. 好子集的数目（困难）.md
+++ b/LeetCode/1991-2000/1994. 好子集的数目（困难）.md
@@ -73,7 +73,7 @@ Tag : 「状压 DP」
 
 需要注意的是，由于我们是从范围 $[2, 30]$ 范围内从前往后考虑每个 $t$，因此**在枚举 $prev$ 时需要进行倒序遍历，确保计算 $f[s]$ 所依赖的 $f[prev]$ 为不考虑当前数值 $t$ 时的方案数**。
 
-由「质数 $p$ 组成的好子集方案数」为 $ans = \sum_{state' = 1}^{{1 << 10}} f[state']$，其中 $state'$ 对应一个合法的好子集方案。
+由「质数 $p$ 组成的好子集方案数」为 $ans = \sum_{state' = 1}^{{1024}} f[state']$，其中 $state'$ 对应一个合法的好子集方案。
 
 在此基础上，再考虑数值 $1$ 对答案的影响：**在每个合法的 $state'$ 前提下，增加若干个 $1$ 并不影响子集乘积（即好子集增加 $1$ 后仍为好子集），因此每个合法子集 $state'$ 可以对应出 $2^{cnts[1]}$ 个具体方案（代表每个 $1$ 即可以选，也可以不选）。**
 
