--- a/LeetCode/21-30/21. 合并两个有序链表（简单）.md
+++ b/LeetCode/21-30/21. 合并两个有序链表（简单）.md
@@ -35,9 +35,9 @@ Tag : 「多路归并」、「链表」
 ```
 
 提示：
-* 两个链表的节点数目范围是 [0, 50]
-* -100 <= Node.val <= 100
-* l1 和 l2 均按 非递减顺序 排列
+* 两个链表的节点数目范围是 $[0, 50]$
+* $-100 <= Node.val <= 100$
+* `l1` 和 `l2` 均按 非递减顺序 排列
 
 ---
 
