--- a/LeetCode/21-30/22. 括号生成（中等）.md
+++ b/LeetCode/21-30/22. 括号生成（中等）.md
@@ -6,7 +6,7 @@ Tag : 「DFS」、「回溯算法」
 
 
 
-数字 n 代表生成括号的对数，请你设计一个函数，用于能够生成所有可能的并且 有效的 括号组合。
+数字 $n$ 代表生成括号的对数，请你设计一个函数，用于能够生成所有可能的并且 有效的 括号组合。
 
 
 示例 1：
@@ -23,7 +23,7 @@ Tag : 「DFS」、「回溯算法」
 ```
 
 提示：
-* 1 <= n <= 8
+* $1 <= n <= 8$
 
 ---
 
