--- a/LeetCode/21-30/23. 合并K个升序链表（困难）.md
+++ b/LeetCode/21-30/23. 合并K个升序链表（困难）.md
@@ -40,12 +40,12 @@ Tag : 「优先队列」、「堆」、「链表」
 ```
 
 提示：
-* k == lists.length
-* 0 <= k <= $10^4$
-* 0 <= lists[i].length <= 500
-* -$10^4$ <= lists[i][j] <= $10^4$
-* lists[i] 按 升序 排列
-* lists[i].length 的总和不超过 $10^4$
+* $k == lists.length$
+* $0 <= k <= 10^4$
+* $0 <= lists[i].length <= 500$
+* $-10^4 <= lists[i][j] <= 10^4$
+* $lists[i]$ 按 升序 排列
+* $lists[i].length$ 的总和不超过 $10^4$
 
 ---
 
