--- a/LeetCode/21-30/24. 两两交换链表中的节点（中等）.md
+++ b/LeetCode/21-30/24. 两两交换链表中的节点（中等）.md
@@ -33,14 +33,11 @@ Tag : 「递归」、「链表」
 ```
 
 提示：
-* 链表中节点的数目在范围 [0, 100] 内
+* 链表中节点的数目在范围 $[0, 100]$ 内
+* $0 <= Node.val <= 100$
 
-* 0 <= Node.val <= 100
 
-  
-
-**进阶：你能在不修改链表节点值的情况下解决这个问题吗?（也就是说，仅修改节点本身。）**
-
+进阶：你能在不修改链表节点值的情况下解决这个问题吗?（也就是说，仅修改节点本身。）
 
 ---
 
