--- a/LeetCode/21-30/25. K 个一组翻转链表（困难）.md
+++ b/LeetCode/21-30/25. K 个一组翻转链表（困难）.md
@@ -6,11 +6,11 @@ Tag : 「递归」、「迭代」、「链表」
 
 
 
-给你一个链表，每 k 个节点一组进行翻转，请你返回翻转后的链表。
+给你一个链表，每 `k` 个节点一组进行翻转，请你返回翻转后的链表。
 
-k 是一个正整数，它的值小于或等于链表的长度。
+`k` 是一个正整数，它的值小于或等于链表的长度。
 
-如果节点总数不是 k 的整数倍，那么请将最后剩余的节点保持原有顺序。
+如果节点总数不是 `k` 的整数倍，那么请将最后剩余的节点保持原有顺序。
 
 进阶：
 
@@ -48,10 +48,10 @@ k 是一个正整数，它的值小于或等于链表的长度。
 输出：[1]
 ```
 提示：
-* 列表中节点的数量在范围 sz 内
-* 1 <= sz <= 5000
-* 0 <= Node.val <= 1000
-* 1 <= k <= sz
+* 列表中节点的数量在范围 `sz` 内
+* $1 <= sz <= 5000$
+* $0 <= Node.val <= 1000$
+* $1 <= k <= sz$
 
 ---
 
