--- a/LeetCode/21-30/26. 删除有序数组中的重复项（简单）.md
+++ b/LeetCode/21-30/26. 删除有序数组中的重复项（简单）.md
@@ -6,13 +6,11 @@ Tag : 「数组」、「双指针」、「数组移除元素问题」
 
 
 
-给你一个有序数组 nums ，请你 原地 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度。
+给你一个有序数组 `nums` ，请你 原地 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度。
 
-不要使用额外的数组空间，你必须在 原地 修改输入数组 并在使用 O(1) 额外空间的条件下完成。
+不要使用额外的数组空间，你必须在 原地 修改输入数组 并在使用 $O(1)$ 额外空间的条件下完成。
 
-
-
-**说明：**
+说明：
 
 为什么返回数值是整数，但输出的答案是数组呢?
 
@@ -48,14 +46,13 @@ for (int i = 0; i < len; i++) {
 ```
 
 提示：
-* 0 <= nums.length <= 3 * $10^4$
-* -$10^4$ <= nums[i] <= $10^4$
-* nums 已按升序排列
-
+* $0 <= nums.length <= 3 \times 10^4$
+* $-10^4 <= nums[i] <= 10^4$
+* `nums` 已按升序排列
 
 ---
 
-### 双指针解法
+### 双指针
 
 一个指针 `i` 进行数组遍历，另外一个指针 `j` 指向有效数组的最后一个位置。
 
@@ -144,7 +141,6 @@ class Solution {
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
-
 
 ---
 
