--- a/LeetCode/21-30/29. 两数相除（中等）.md
+++ b/LeetCode/21-30/29. 两数相除（中等）.md
@@ -6,15 +6,13 @@ Tag : 「数学」、「二分」
 
 
 
-给定两个整数，被除数 dividend 和除数 divisor。
+给定两个整数，被除数 `dividend` 和除数 `divisor`。
 
-将两数相除，要求不使用乘法、除法和 mod 运算符。
+将两数相除，要求不使用乘法、除法和 `mod` 运算符。
 
-返回被除数 dividend 除以除数 divisor 得到的商。
+返回被除数 `dividend` 除以除数 `divisor` 得到的商。
 
-整数除法的结果应当截去（truncate）其小数部分，例如：truncate(8.345) = 8 以及 truncate(-2.7335) = -2
-
- 
+整数除法的结果应当截去（`truncate`）其小数部分，例如：`truncate(8.345) = 8` 以及 `truncate(-2.7335) = -2` 
 
 示例 1:
 ```
@@ -34,8 +32,8 @@ Tag : 「数学」、「二分」
 ```
 
 提示：
-* 被除数和除数均为 32 位有符号整数。
-* 除数不为 0。
+* 被除数和除数均为 $32$ 位有符号整数。
+* 除数不为 $0$。
 * 假设我们的环境只能存储 32 位有符号整数，其数值范围是 [−$2^{31}$,  $2^{31}$ − 1]。本题中，如果除法结果溢出，则返回 $2^{31}$ − 1。
 
 ---
@@ -95,7 +93,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：在 $[0, a]$ 范围内二分操作，复杂度为$O(\log{a})$；倍增乘法的与操作数的二进制长度相关，复杂度为 $O(\log{b})$。整体复杂度为 $O(\log{a} * \log{b})$
+* 时间复杂度：在 $[0, a]$ 范围内二分操作，复杂度为$O(\log{a})$；倍增乘法的与操作数的二进制长度相关，复杂度为 $O(\log{b})$。整体复杂度为 $O(\log{a} \times \log{b})$
 * 空间复杂度：$O(1)$
 
 ---
@@ -136,7 +134,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(\log{a} * \log{b})$
+* 时间复杂度：$O(\log{a} \times \log{b})$
 * 空间复杂度：$O(1)$
 
 ---
