--- a/LeetCode/21-30/30. 串联所有单词的子串（困难）.md
+++ b/LeetCode/21-30/30. 串联所有单词的子串（困难）.md
@@ -6,20 +6,18 @@ Tag : 「哈希表」、「滑动窗口」
 
 
 
-给定一个字符串 s 和一些长度相同的单词 words。
+给定一个字符串 `s` 和一些长度相同的单词 `words`。
 
-找出 s 中恰好可以由 words 中所有单词串联形成的子串的起始位置。
+找出 `s` 中恰好可以由 `words` 中所有单词串联形成的子串的起始位置。
 
-注意子串要与 words 中的单词完全匹配，中间不能有其他字符，但不需要考虑 words 中单词串联的顺序。
-
-
+注意子串要与 `words` 中的单词完全匹配，中间不能有其他字符，但不需要考虑 `words` 中单词串联的顺序。
 
 
 示例 1：
 ```
 输入：
-  s = "barfoothefoobarman",
-  words = ["foo","bar"]
+s = "barfoothefoobarman",
+words = ["foo","bar"]
   
 输出：[0,9]
 
@@ -30,8 +28,8 @@ Tag : 「哈希表」、「滑动窗口」
 示例 2：
 ```
 输入：
-  s = "wordgoodgoodgoodbestword",
-  words = ["word","good","best","word"]
+s = "wordgoodgoodgoodbestword",
+words = ["word","good","best","word"]
   
 输出：[]
 ```
@@ -94,8 +92,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：将 `words` 中的单词存入哈希表，复杂度为 $O(m)$；然后第一层循环枚举 `s` 中的每个字符作为起点，复杂度为 $O(n)$；在循环中将 `sub` 划分为 `m` 个单词进行统计，枚举了 `m - 1` 个下标，复杂度为 $O(m)$；每个字符串的长度为 `w`。整体复杂度为 $O(n * m * w)$
-* 空间复杂度：$O(m * w)$
+* 时间复杂度：将 `words` 中的单词存入哈希表，复杂度为 $O(m)$；然后第一层循环枚举 `s` 中的每个字符作为起点，复杂度为 $O(n)$；在循环中将 `sub` 划分为 `m` 个单词进行统计，枚举了 `m - 1` 个下标，复杂度为 $O(m)$；每个字符串的长度为 `w`。整体复杂度为 $O(n \times m \times w)$
+* 空间复杂度：$O(m \times w)$
 
 ---
 
@@ -159,8 +157,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：将 `words` 中的单词存入哈希表，复杂度为 $O(m)$；然后枚举了取余的结果，复杂度为 $O(w)$；每次循环最多处理 `n` 长度的字符串，复杂度为 $O(n)$。整体复杂度为 $O(m + w * n)$
-* 空间复杂度：$O(m * w)$
+* 时间复杂度：将 `words` 中的单词存入哈希表，复杂度为 $O(m)$；然后枚举了取余的结果，复杂度为 $O(w)$；每次循环最多处理 `n` 长度的字符串，复杂度为 $O(n)$。整体复杂度为 $O(m + w \times n)$
+* 空间复杂度：$O(m \times w)$
 
 ---
 
