--- a/LeetCode/1-10/9. 回文数（简单）.md
+++ b/LeetCode/1-10/9. 回文数（简单）.md
@@ -6,43 +6,48 @@ Tag : 「数学」、「回文串」
 
 
 
-给你一个整数 x ，如果 x 是一个回文整数，返回 true ；否则，返回 false 。
+给你一个整数 `x` ，如果 `x` 是一个回文整数，返回 `true` ；否则，返回 `false` 。
 
 回文数是指正序（从左向右）和倒序（从右向左）读都是一样的整数。
 
-例如，121 是回文，而 123 不是。
+例如，$121$ 是回文，而 $123$ 不是。
 
 示例 1：
 ```
 输入：x = 121
+
 输出：true
 ```
 示例 2：
 ```
 输入：x = -121
+
 输出：false
+
 解释：从左向右读, 为 -121 。 从右向左读, 为 121- 。因此它不是一个回文数。
 ```
 示例 3：
 ```
 输入：x = 10
+
 输出：false
+
 解释：从右向左读, 为 01 。因此它不是一个回文数。
 ```
 示例 4：
 ```
 输入：x = -101
+
 输出：false
 ```
 
 提示：
-* -$2^{31}$ <= x <= $2^{31}$ - 1
-
+* -$2^{31} <= x <= 2^{31}$ - 1
 
 进阶：你能不将整数转为字符串来解决这个问题吗？
 
-
 ---
+
 ### 字符串解法
 
 虽然进阶里提到了不能用字符串来解决，但还是提供一下吧。
@@ -58,8 +63,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：数字 $n$ 的位数，数字大约有 $log_{10}^n$ 位，翻转操作要执行循环。复杂度为 $O(log_{10}^n)$
-* 空间复杂度：使用了字符串作为存储。复杂度为 $O(log_{10}^n)$
+* 时间复杂度：数字 $n$ 的位数，数字大约有 $\log_{10}^n$ 位，翻转操作要执行循环。复杂度为 $O(\log_{10}^n)$
+* 空间复杂度：使用了字符串作为存储。复杂度为 $O(\log_{10}^n)$
 
 ---
 ### 非字符串解法（完全翻转）
@@ -81,13 +86,13 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：数字 $n$ 的位数，数字大约有 $log_{10}^n$ 位。复杂度为 $O(log_{10}^n)$
+* 时间复杂度：数字 $n$ 的位数，数字大约有 $\log_{10}^n$ 位。复杂度为 $O(\log_{10}^n)$
 * 空间复杂度：$O(1)$
 
 ---
 ### 非字符串解法（部分翻转）
 
-如果在进阶中增加一个我们熟悉的要求：环境中只能存储得下 32 位的有符号整数。
+如果在进阶中增加一个我们熟悉的要求：环境中只能存储得下 $32$ 位的有符号整数。
 
 那么我们就连 `long` 也不能用了，这时候要充分利用「回文」的特性：前半部分和后半部分（翻转）相等。
 
@@ -113,11 +118,11 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：数字 $n$ 的位数，数字大约有 $log_{10}^n$ 位。复杂度为 $O(log_{10}^n)$
+* 时间复杂度：数字 $n$ 的位数，数字大约有 $\log_{10}^n$ 位。复杂度为 $O(\log_{10}^n)$
 * 空间复杂度：$O(1)$
 
-
 ---
+
 ### 最后
 
 这是我们「刷穿 LeetCode」系列文章的第 `No.9` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
