--- a/LeetCode/11-20/15. 三数之和（中等）.md
+++ b/LeetCode/11-20/15. 三数之和（中等）.md
@@ -6,9 +6,9 @@ Tag : 「双指针」、「排序」、「n 数之和」
 
 
 
-给你一个包含 n 个整数的数组 nums，判断 nums 中是否存在三个元素 a，b，c ，使得 a + b + c = 0 ？
+给你一个包含 $n$ 个整数的数组 `nums`，判断 `nums` 中是否存在三个元素 `a`，`b`，`c` ，使得 `a + b + c = 0` ？
 
-请你找出所有和为 0 且不重复的三元组。
+请你找出所有和为 $0$ 且不重复的三元组。
 
 注意：答案中不可以包含重复的三元组。
 
@@ -30,8 +30,8 @@ Tag : 「双指针」、「排序」、「n 数之和」
 ```
 
 提示：
-* 0 <= nums.length <= 3000
-* -$10^5$ <= nums[i] <= $10^5$
+* $0 <= nums.length <= 3000$
+* $-10^5 <= nums[i] <= 10^5$
 
 ---
 ### 排序 + 双指针
@@ -75,7 +75,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：排序的复杂度为 $O(logN)$，对于每个 `i` 而言，最坏的情况 `j` 和 `k` 都要扫描一遍数组的剩余部分，复杂度为 $O(n ^ 2)$。整体复杂度为 $O(n ^ 2)$
+* 时间复杂度：排序的复杂度为 $O(\log{n})$，对于每个 `i` 而言，最坏的情况 `j` 和 `k` 都要扫描一遍数组的剩余部分，复杂度为 $O(n ^ 2)$。整体复杂度为 $O(n ^ 2)$
 * 空间复杂度：$O(n ^ 2)$
 
 ---
