--- a/LeetCode/11-20/16. 最接近的三数之和（中等）.md
+++ b/LeetCode/11-20/16. 最接近的三数之和（中等）.md
@@ -6,15 +6,13 @@ Tag : 「双指针」、「排序」、「n 数之和」
 
 
 
-给定一个包括 n 个整数的数组 nums 和 一个目标值 target。
+给定一个包括 $n$ 个整数的数组 `nums` 和 一个目标值 `target`。
 
-找出 nums 中的三个整数，使得它们的和与 target 最接近。
+找出 `nums` 中的三个整数，使得它们的和与 `target` 最接近。
 
 返回这三个数的和。
 
 假定每组输入只存在唯一答案。
-
-
 
 示例：
 ```
@@ -26,10 +24,9 @@ Tag : 「双指针」、「排序」、「n 数之和」
 ```
 
 提示：
-* 3 <= nums.length <= $10^3$
-* -$10^3$ <= nums[i] <= $10^3$
-* -$10^4$ <= target <= $10^4$
-
+* $3 <= nums.length <= 10^3$
+* $-10^3 <= nums[i] <= 10^3$
+* $-10^4 <= target <= 10^4$
 
 ---
 
@@ -74,7 +71,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：排序的复杂度为 $O(logN)$，对于每个 `i` 而言，最坏的情况 `j` 和 `k` 都要扫描一遍数组的剩余部分，复杂度为 $O(n^2)$。整体复杂度为 $O(n^2)$
+* 时间复杂度：排序的复杂度为 $O(\log{n})$，对于每个 `i` 而言，最坏的情况 `j` 和 `k` 都要扫描一遍数组的剩余部分，复杂度为 $O(n^2)$。整体复杂度为 $O(n^2)$
 * 空间复杂度：$O(n ^ 2)$
 
 ---
