--- a/LeetCode/21-30/27. 移除元素（简单）.md
+++ b/LeetCode/21-30/27. 移除元素（简单）.md
@@ -6,7 +6,7 @@ Tag : 「数组」、「双指针」、「数组移除元素问题」
 
 
 
-给你一个数组 nums 和一个值 val，你需要「原地」移除所有数值等于 val 的元素，并返回移除后数组的新长度。
+给你一个数组 `nums` 和一个值 `val`，你需要「原地」移除所有数值等于 `val` 的元素，并返回移除后数组的新长度。
 
 不要使用额外的数组空间，你必须仅使用 $O(1)$ 额外空间并「原地」修改输入数组。
 
@@ -33,7 +33,6 @@ int len = removeElement(nums, val);
 for (int i = 0; i < len; i++) {
     print(nums[i]);
 }
-
 ```
 
 
@@ -57,13 +56,13 @@ for (int i = 0; i < len; i++) {
 ```
 
 提示：
-* 0 <= nums.length <= 100
-* 0 <= nums[i] <= 50
-* 0 <= val <= 100
+* $0 <= nums.length <= 100$
+* $0 <= nums[i] <= 50$
+* $0 <= val <= 100$
 
 ---
 
-### 双指针解法
+### 双指针
 
 本解法的思路与 [【题解】26. 删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/solution/shua-chuan-lc-jian-ji-shuang-zhi-zhen-ji-2eg8/) 中的「双指针解法」类似。
 
