✨style: Bulk processing format

--- a/LeetCode/121-130/127. 单词接龙（困难）.md
+++ b/LeetCode/121-130/127. 单词接龙（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[127. 单词接龙](https://leetcode-cn.com/problems/word-ladder/solution/gong-shui-san-xie-ru-he-shi-yong-shuang-magjd/)** ，难度为 **困难**。
 
-Tag : 「双向 BFS」
+Tag : 「双向 BFS」、「启发式搜索」、「AStar 算法」
 
 
 
@@ -19,24 +19,28 @@ Tag : 「双向 BFS」
 示例 1：
 ```
 输入：beginWord = "hit", endWord = "cog", wordList = ["hot","dot","dog","lot","log","cog"]
+
 输出：5
+
 解释：一个最短转换序列是 "hit" -> "hot" -> "dot" -> "dog" -> "cog", 返回它的长度 5。
 ```
 示例 2：
 ```
 输入：beginWord = "hit", endWord = "cog", wordList = ["hot","dot","dog","lot","log"]
+
 输出：0
+
 解释：endWord "cog" 不在字典中，所以无法进行转换。
 ```
 
 提示：
-* 1 <= beginWord.length <= 10
-* endWord.length == beginWord.length
-* 1 <= wordList.length <= 5000
-* wordList[i].length == beginWord.length
-* beginWord、endWord 和 wordList[i] 由小写英文字母组成
-* beginWord != endWord
-* wordList 中的所有字符串 互不相同
+* $1 <= beginWord.length <= 10$
+* $endWord.length == beginWord.length$
+* $1 <= wordList.length <= 5000$
+* $wordList[i].length == beginWord.length$
+* `beginWord`、`endWord` 和 `wordList[i]` 由小写英文字母组成
+* `beginWord != endWord`
+* `wordList` 中的所有字符串 互不相同
 
 ---
 
@@ -200,8 +204,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 `wordList` 长度为 $n$，`beginWord` 字符串长度为 $m$。由于所有的搜索结果必须都在 `wordList` 出现过，因此算上起点最多有 $n + 1$ 节点，最坏情况下，所有节点都联通，搜索完整张图复杂度为 $O(n^2)$ ；从 `beginWord` 出发进行字符替换，替换时进行逐字符检查，复杂度为 $O(m)$。整体复杂度为 $O(m * n^2)$
-* 空间复杂度：同等空间大小。$O(m * n^2)$
+* 时间复杂度：令 `wordList` 长度为 $n$，`beginWord` 字符串长度为 $m$。由于所有的搜索结果必须都在 `wordList` 出现过，因此算上起点最多有 $n + 1$ 节点，最坏情况下，所有节点都联通，搜索完整张图复杂度为 $O(n^2)$ ；从 `beginWord` 出发进行字符替换，替换时进行逐字符检查，复杂度为 $O(m)$。整体复杂度为 $O(m \times n^2)$
+* 空间复杂度：同等空间大小。$O(m \times n^2)$
 
 ---
 
@@ -285,6 +289,8 @@ class Solution {
     }
 }
 ```
+* 时间复杂度：启发式搜索分析时空复杂度意义不大
+* 空间复杂度：启发式搜索分析时空复杂度意义不大
 
 ---
 
