--- a/LeetCode/431-440/433. 最小基因变化（中等）.md
+++ b/LeetCode/431-440/433. 最小基因变化（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[433. 最小基因变化](https://leetcode-cn.com/problems/minimum-genetic-mutation/solution/by-ac_oier-74b4/)** ，难度为 **中等**。
 
-Tag : 「BFS」、「双向 BFS」、「图论 DFS」、「A* 算法」、「启发式搜索」
+Tag : 「BFS」、「双向 BFS」、「图论 DFS」、「AStar 算法」、「启发式搜索」
 
 
 
